--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 name: Deploy Application
 
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 9 * * *' # 매일 오전 9시에 실행
 
 jobs:
   deploy:
@@ -22,6 +21,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Import Excel Data
+        run: |
+          python import_from_excel.py --file "해야 할 일 체크리스트.xlsx"
 
       - name: Run application
         env:
