Fix GitHub Actions workflow - add debug step and verify file existence

--- a/.github/workflows/daily-email.yml
+++ b/.github/workflows/daily-email.yml
@@ -39,6 +39,12 @@ jobs:
         echo "DASHBOARD_URL=${{ secrets.DASHBOARD_URL }}" >> .env
         echo "SECRET=${{ secrets.SECRET }}" >> .env
         
+    - name: Debug - Check files
+      run: |
+        pwd
+        ls -la
+        ls -la send_digest_supabase.py || echo "send_digest_supabase.py not found"
+        
     - name: Send daily emails
       run: |
         python send_digest_supabase.py
