GitHub Actions 워크플로우 수정: send_digest_supabase.py 사용

--- a/.github/workflows/daily-email.yml
+++ b/.github/workflows/daily-email.yml
@@ -103,7 +103,7 @@ jobs:
         
     - name: Send daily emails
       run: |
-        python digest.py
+        python send_digest_supabase.py
         
     - name: Log completion
       run: |
