--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-base_url: https://glowing-train-pjqg4gx9v9w53r99w-8081.app.github.dev/complete
+base_url: https://glowing-train-pjqg4gx9v9w53r99w-8081.app.github.dev
 dashboard_url: https://glowing-train-pjqg4gx9v9w53r99w-8081.app.github.dev/dashboard
 smtp:
   host: smtp.gmail.com
