--- a/.github/workflows/daily-email.yml
+++ b/.github/workflows/daily-email.yml
@@ -24,19 +24,41 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
-    - name: Create config file
+    - name: Create config file and environment variables
+      env:
+        SMTP_PASS: ${{ secrets.SMTP_PASS }}
+        SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+        SUPABASE_SERVICE_KEY: ${{ secrets.SUPABASE_SERVICE_KEY }}
       run: |
+        # Create config.yaml with correct port (8080)
         cat > config.yaml << EOF
-        base_url: https://glowing-train-pjqg4gx9v9w53r99w-8081.app.github.dev/complete
-        dashboard_url: https://glowing-train-pjqg4gx9v9w53r99w-8081.app.github.dev/dashboard
+        base_url: https://glowing-train-pjqg4gx9v9w53r99w-8080.app.github.dev/complete
+        dashboard_url: https://glowing-train-pjqg4gx9v9w53r99w-8080.app.github.dev/dashboard
         smtp:
           host: smtp.gmail.com
           port: 465
           user: dadae5th@gmail.com
-          pass: kptwwtdbavjgajly
+          pass: ${SMTP_PASS}
           sender_name: 해야할일 알림
           sender_email: dadae5th@gmail.com
         secret: gBckLh5s3CSP5VIu6TPi0f1aic6tofQ9EFgrcwf24W1Zl4B2
+        EOF
+        
+        # Create .env file for environment variables
+        cat > .env << EOF
+        SUPABASE_URL=${SUPABASE_URL}
+        SUPABASE_KEY=${SUPABASE_KEY}
+        SUPABASE_SERVICE_KEY=${SUPABASE_SERVICE_KEY}
+        SMTP_HOST=smtp.gmail.com
+        SMTP_PORT=465
+        SMTP_USER=dadae5th@gmail.com
+        SMTP_PASS=${SMTP_PASS}
+        SMTP_SENDER_NAME=해야할일 알림
+        SMTP_SENDER_EMAIL=dadae5th@gmail.com
+        BASE_URL=https://glowing-train-pjqg4gx9v9w53r99w-8080.app.github.dev/complete
+        DASHBOARD_URL=https://glowing-train-pjqg4gx9v9w53r99w-8080.app.github.dev/dashboard
+        SECRET=gBckLh5s3CSP5VIu6TPi0f1aic6tofQ9EFgrcwf24W1Zl4B2
         EOF
         
     - name: Initialize database and sample data
