포트 표준화: 모든 8003 포트 참조를 8080으로 통일
- .env: BASE_URL, DASHBOARD_URL을 8080으로 변경
- devcontainer.json: 포트 포워딩을 8080만 유지
- 배치 파일들: start_server.bat, run_server.bat 포트 통일
- Dockerfile: EXPOSE와 CMD 포트를 8080으로 변경
- 문서 파일들: README.md, 가이드 문서들의 모든 URL 업데이트
- Python 파일들: task_manager.py, migrate_to_supabase.py 등 안내 메시지 통일
- 자동화 스크립트들: start_codespace_server.sh, check_server_status.sh 포트 통일

이제 전체 시스템이 일관되게 포트 8080을 사용합니다.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,15 +21,11 @@
       }
     }
   },
-  "forwardPorts": [8080, 8003],
+  "forwardPorts": [8080],
   "portsAttributes": {
     "8080": {
       "label": "Webhook Server",
       "onAutoForward": "notify"
-    },
-    "8003": {
-      "label": "Local Server", 
-      "onAutoForward": "silent"
     }
   },
   "postCreateCommand": "pip install -r requirements.txt",
